# app/Http/Controllers/ApiDapilController.php
@@ -92,4 +92,66 @@ class ApiDapilController extends Controller
         }
     }
 
+    /**
+        * @OA\Info(
+        *    title="Your super  ApplicationAPI",
+        *    version="1.0.0",
+        * )
+     * @OA\Post(
+     *     path="   ",
+     *     summary="insertDetailDapil",
+     *     tags={"Authentication"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"id_dapil"},
+     *             @OA\Property(property="id_dapil", type="int", format="number", example="")
+     *         )
+     *     ), 
+     *     @OA\Response(response="200", description="Successful loginmobile"),
+     *     @OA\Response(response="401", description="Unauthorized"),
+     * )
+     */
+
+    public function insertDetailDapil(Request $request)
+    {
+        try {
+            $validator = Validator::make($request->all(), [
+                'idProv' => 'required|idProv'
+            ]);
+    
+            // Validasi input
+            if ($validator->fails()) {
+                return response()->json(['error' => $validator->errors()], 400);
+            }
+    
+            DB::beginTransaction();
+    
+            $image = DetailDapilModel::create([
+                'id_user' => $request->id_user,
+                'id_tps' => $request->id_tps,
+                'id_rtrw' => $request->id_rtrw,
+                'id_desa' => $request->id_desa,
+                'id_kecamatan' => $request->id_kecamatan,
+                'id_dapil' => $request->id_dapil,
+                'updated_at' => Carbon::now(),
+                'created_at' => Carbon::now(),
+                'status_input' => 1,
+            ]);
+
+            // Add uploaded image details to the response data
+            $uploadedImages[] = [
+                'filename' => $image->image
+            ];
+    
+            DB::commit();
+    
+            // Include uploaded image details in the response
+            return response()->json(['message' => 'Image(s) successfully uploaded', 'uploaded_images' => $uploadedImages], 200);
+        } catch (\Throwable $th) {
+            DB::rollBack();
+            return response()->json(['error' => 'Internal Server Error'], 500);
+        }
+    }
+
 }
